temporarilly allowing http api calls

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="We recommends artists using statistics and Machine Learning Algorithms."
     />
+    <!-- TODO: Temporarilly allowing http apis from frontend shoud update the api to https and remove this line -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/cuttime.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
