sc-000 add new header

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,14 @@
       name="description"
       content="We recommends artists using statistics and Machine Learning Algorithms."
     />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <!-- TODO: Temporarilly allowing http apis from frontend shoud update the api to https and remove this line -->
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/cuttime.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-      
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
